@@ -42,12 +42,12 @@ if( ! function_exists( 'optionsframework_mlu_init' ) ) {
  */
 
 if( ! function_exists( 'optionsframework_mlu_css' ) ) {
-	function optionsframework_mlu_css () {
+	function optionsframework_mlu_css() {
 		$_html = '';
-		$_html .= '<link rel="stylesheet" href="' . get_option('siteurl') . '/' . WPINC . '/js/thickbox/thickbox.css" type="text/css" media="screen" />' . "\n";
+		$_html .= '<link rel="stylesheet" href="' . get_site_url() . '/' . WPINC . '/js/thickbox/thickbox.css" type="text/css" media="screen" />' . "\n";
 		$_html .= '<script type="text/javascript">
-		var tb_pathToImage = "' . get_option('siteurl') . '/' . WPINC . '/js/thickbox/loadingAnimation.gif";
-	    var tb_closeImage = "' . get_option('siteurl') . '/' . WPINC . '/js/thickbox/tb-close.png";
+		var tb_pathToImage = "' . get_site_url() . '/' . WPINC . '/js/thickbox/loadingAnimation.gif";
+	    var tb_closeImage = "' . get_site_url() . '/' . WPINC . '/js/thickbox/tb-close.png";
 	    </script>' . "\n";
 	    echo $_html;
 	}
